# ft_linear_regression

./: .gitignore  CMakeLists.txt  chat.json  infos.md  subject.md
src/: predict.cpp  train.cpp
